--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "css-loader": "^5.0.1",
     "style-loader": "^2.0.0",
+    "file-loader": "^6.2.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
